<?xml version="1.0"?>
<package format="2">
  <name>serial_communicator</name>
  <version>0.0.0</version>
  <description>The serial_communicator package</description>

  <maintainer email="junhokim@todo.todo">junhokim</maintainer>


  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>core_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>core_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>core_msgs</exec_depend>
  <depend>async_comm</depend>

</package>
